--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode
 # Logs
 logs
 *.log
@@ -73,6 +74,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
+config.env
 .env
 .env.development.local
 .env.test.local
