--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@babel/polyfill": "^7.12.1",
         "axios": "^1.5.0",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
@@ -25,6 +26,7 @@
         "express-rate-limit": "^7.0.1",
         "helmet": "^7.0.0",
         "hpp": "^0.2.3",
+        "html-to-text": "^9.0.5",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.0",
         "morgan": "^1.10.0",
